@@ -1,3 +1,7 @@
+= master
+
+* Make Integer in typecast_params handle Numeric input, and require that Numeric input not have fractional parts (jeremyevans) (#146)
+
 = 3.9.0 (2018-06-11)
 
 * Add route_csrf plugin for CSRF protection, offering more control, better security, and request-specific tokens compared to rack_csrf (jeremyevans)
